oxiplate-derive/tests/broken/numbers/float-exponent-without-digit.stderr
error: Expected at least one digit in exponent
 --> tests/broken/numbers/float-exponent-without-digit.rs:4:23
  |
4 | #[oxiplate_inline("{{ 19.89e }}")]
  |                       ^^^^^^
